[package]
name = "json-performance"
version = "0.1.0"
authors = ["Benjamin Kampmann <ben@gnunicorn.org>"]
build = "build.rs"

[build-dependencies]
serde_codegen = "0.8"

[dependencies]
ffi_utils = { git = "https://github.com/nbaksalyar/safe_core.git", branch = "patch_ffi" }
safe_core = { git = "https://github.com/nbaksalyar/safe_core.git", branch = "patch_ffi" }
serde = "0.8"
serde_json = "0.8"

[lib]
crate_type = ["staticlib", "rlib", "cdylib"]